--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ data/gis/.DS_Store
 data/.DS_Store
 .DS_Store
 .built_in_models_1709041821778
+.built_in_models_1712495259370
 .gama_application_workspace
 .metadata
